--- a/05. Slideshow/carousel.html
+++ b/05. Slideshow/carousel.html
@@ -9,17 +9,17 @@
 	<div class="slideshow-container">
 		<div class="mySlides fade">
 			<div class="numertext">1/3</div>
-			<img src="C:\Users\lenovo\Pictures\mountaineer-2080138_1920.jpg">
+			<img src="roses-828945_1920.jpg">
 			<div class="text">Caption One</div>
 		</div>
 		<div class="mySlides fade">
 			<div class="numertext">2/3</div>
-			<img src="C:\Users\lenovo\Pictures\input-3728350_1920.jpg">
+			<img src="paint-2985569_1920.jpg">
 			<div class="text">Caption Two</div>
 		</div>
 		<div class="mySlides fade">
 			<div class="numertext">3/3</div>
-			<img src="C:\Users\lenovo\Pictures\telescope-2127704_1920.jpg">
+			<img src="abstract-2468874_1920.jpg">
 			<div class="text">Caption Three</div>
 		</div>
 
