--- a/06. Multiple Image Carousel/carousel.html
+++ b/06. Multiple Image Carousel/carousel.html
@@ -13,35 +13,35 @@
 		</div>
 		<div class="card-container">
 			<div class="card">
-				<img src="C:\Users\lenovo\Pictures\mountaineer-2080138_1920.jpg">
+				<img src="abstract-2468874_1920.jpg">
 				<div class="text">Caption One</div>
 			</div>
 			<div class="card">
-				<img src="C:\Users\lenovo\Pictures\input-3728350_1920.jpg">
+				<img src="interaction-1233873_1920.jpg">
 				<div class="text">Caption Two</div>
 			</div>
 			<div class="card">
-				<img src="C:\Users\lenovo\Pictures\telescope-2127704_1920.jpg">
+				<img src="origami-3826838_1920.jpg">
 				<div class="text">Caption Three</div>
 			</div>
 			<div class="card">
-				<img src="C:\Users\lenovo\Pictures\amathon\37380407_1913578421996676_6117945974145941504_n.JPG">
+				<img src="paint-2985569_1920.jpg">
 				<div class="text">Caption Four</div>
 			</div>
 			<div class="card">
-				<img src="C:\Users\lenovo\Pictures\amathon\37400795_1913578288663356_1420829122011070464_n.jpg">
+				<img src="roses-828945_1920.jpg">
 				<div class="text">Caption Five</div>
 			</div>
 			<div class="card">
-				<img src="C:\Users\lenovo\Pictures\amathon\IMG_6573.jpg">
+				<img src="soap-bubble-3490959_1920.jpg">
 				<div class="text">Caption Six</div>
 			</div>
 			<div class="card">
-				<img src="C:\Users\lenovo\Pictures\amathon\KakaoTalk_20180724_160453057-1024x768.jpg">
+				<img src="kids-2985782_1920.jpg">
 				<div class="text">Caption Seven</div>
 			</div>
 			<div class="card">
-				<img src="C:\Users\lenovo\Pictures\amathon\37613760_1913578348663350_7869515336322646016_n.jpg">
+				<img src="photographer-1150052_1920.jpg">
 				<div class="text">Caption Eight</div>
 			</div>
 		</div>
